tests/paczka1/small_fuzzy/10830472.err
Error in line 3: GPt S389 40,1
Error in line 9: 3wuqA63DgD S24} }56,9
Error in line 7: 3wuqA63DgD S241 59,0
Error in line 12: A375 S389 87,0
